package gameLaby.laby;

public class BoutonPassage {

    private Position pos;
    private PassageSecret passageSecret;

    public BoutonPassage(Position p, PassageSecret ps){
        this.pos = p;
        this.passageSecret = ps;
    }
}
