@startuml

class Labyrinthe{
    {static} +MUR : char
    {static} +PJ : char
    {static} +VIDE : char
    {static} +HAUT : String
    {static} +BAS : String
    {static} +GAUCHE : String
    {static} +DROITE : String
    +murs : boolean[][]

    +Labyrinthe(String nomFichier) : Labyrinthe
    {static}+getSuivant(int x, int y, String action) : int[]
    +deplacerPerso(String action) : void
    +deplacementPossible(int[] suivant) : boolean
    +etreFini() : boolean
    +getLenghtY() : int
    +getLenght() : int
    +getMur(int x, int y) : boolean


}
class Perso {
    +Perso(int dx, int dy) : Perso
    +etrePresent(int dx, int dy) : boolean
    +getX() : int
    +getY() : int
}

class PassageSecret {
    -ouvert : boolean
    +PassageSecret(int dx, int dy, BoutonPassage btn)
    +ouvrirPassage() : void
    +etreOuvert() : boolean
    +getX() : int
    +getY() : int
}

class BoutonPassage {
    +BoutonPassage(int dx, int dy)
    +activerPassage() : void
    +getX() : int
    +getY() : int
}

class Position {
    -x : int
    -y : int
    +getX() : int
    +getY() : int
}

class Monstre{
    +Monstre(int dx, int dy)
    +etrePresent(int dx, int dy) : boolean
    +getX() : int
    +getY() : int
}

Labyrinthe "1"-->"1" Perso : +pj
Labyrinthe "1"-->"1" Monstre : +monstre
Labyrinthe "1"-->"1" PassageSecret : -passageSecret
BoutonPassage "1"-->"1" PassageSecret : +passageSecret
Labyrinthe "1"-->"1" BoutonPassage : -bouton
Perso "1"-->"1" Position : -pos
Monstre "1"-->"1" Position : -pos
PassageSecret "1"-->"1" Position : -pos
BoutonPassage "1"-->"1" Position : -pos


@enduml